# cmd

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
cmd/: Cargo.toml
cmd/examples/cli-app/: Cargo.toml
cmd/examples/cli-app/src/: main.rs
cmd/src/: cmd.rs  command_handler.rs  handlers.rs  lib.rs  main.rs
cmd/test_files/: test_in.txt
examples/cli-app/src/: main.rs
rusty-cmd/examples/cli-app/src/: main.rs
rusty-cmd/src/: command_handler.rs
src/: cmd.rs  command_handler.rs  handlers.rs  lib.rs
