workspace = { members = ["examples/cli-app"] }
[package]
name = "rusty-cmd"
description = "A crate for creating custom line-oriented command interpreters in Rust."
repository = "https://github.com/miguelalizo/cmd"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"

exclude = ["examples", "test_files", ".*"]

[dependencies]

